all tests was passed, in the Integration Test of UserServiceImpl & ServiceUtils(Transversal Exception Handler)